--- a/layouts/shortcodes/org/info.html
+++ b/layouts/shortcodes/org/info.html
@@ -97,7 +97,7 @@
             <a href="https://docs.layer5.io/cloud/academy/" target="_blank">
                 Documentation
             </a>|
-            <a href="https://mesheryio.slack.com/ssb/redirect" target="_blank">
+            <a href="https://layer5.io/company/contact" target="_blank">
                 Contact Us
             </a>
         </strong>
