--- a/layouts/shortcodes/org/info.html
+++ b/layouts/shortcodes/org/info.html
@@ -2,8 +2,7 @@
     <h3>Welcome to dev environment for your Academy</h3>
     <p>
         The Layer5 Cloud Academy is a modular learning management system (LMS) designed for building learning paths and
-        interactive, hands-on challenges. It is deeply integrated into the Layer5 cloud ecosystem and Kanvas — a visual
-        designer for cloud native infrastructure. This integration allows you to embed live visualizations, interactive
+        interactive, hands-on challenges. This integration allows you to embed live visualizations, interactive
         designs, and contextual experiences directly into your courses.
     </p>
     <div>
